L3 almost done (no bug fixes etc)

--- a/ASP_LABS/Views/Home/Lab_1.cshtml
+++ b/ASP_LABS/Views/Home/Lab_1.cshtml
@@ -16,7 +16,7 @@
     <h2>Форма</h2>
     <form method="post">
 
-        <select asp-for="Id" class="form-select" name="selDemo"  asp-items="ViewBag.List">
+        <select asp-for="Id" asp-items="ViewBag.List" class="form-select" name="selDemo">
             
         </select>
 
