--- a/ASP_LABS/Areas/Admin/Pages/Index.cshtml
+++ b/ASP_LABS/Areas/Admin/Pages/Index.cshtml
@@ -54,55 +54,7 @@
     </tbody>
 </table>
 
-
-
-
-<!-- Paginator -->
-<nav aria-label="...">
-	<ul class="pagination">
-		@if (Model.Book.CurrentPage > 1)
-		{
-			<li class="page-item">
-				<a class="page-link" asp-area="Admin" asp-page="/Index" asp-route-pageNo="@(Model.Book.CurrentPage - 1)">Назад</a>
-			</li>
-		}
-		else
-		{
-			<li class="page-item disabled">
-				<span class="page-link">Назад</span>
-			</li>
-		}
-		@if (Model.Book.CurrentPage > 1)
-		{
-			<li class="page-item">
-				<a class="page-link" asp-area="Admin" asp-page="/Index" asp-route-pageNo="@(Model.Book.CurrentPage - 1)">@(Model.Book.CurrentPage - 1)</a>
-			</li>
-		}
-
-		<li class="page-item active" aria-current="page">
-			<span class="page-link">@Model.Book.CurrentPage</span>
-		</li>
-
-		@if (Model.Book.CurrentPage < Model.Book.TotalPages)
-		{
-			<li class="page-item">
-				<a class="page-link" asp-area="Admin" asp-page="/Index" asp-route-pageNo="@(Model.Book.CurrentPage + 1)">@(Model.Book.CurrentPage + 1)</a>
-			</li>
-		}
-		@if (Model.Book.CurrentPage < Model.Book.TotalPages)
-		{
-			<li class="page-item">
-				<a class="page-link" asp-area="Admin" asp-page="/Index" asp-route-pageNo="@(Model.Book.CurrentPage + 1)">Вперед</a>
-			</li>
-		}
-		else
-		{
-			<li class="page-item disabled">
-				<span class="page-link">Вперед</span>
-			</li>
-		}
-
-
-
-	</ul>
-</nav>
+    
+<pager current-page="@Model.Book.CurrentPage"
+	   max-pages="@Model.Book.TotalPages"
+	   admin="true"></pager>
