--- a/ASP_LABS/Areas/Admin/Pages/_ViewImports.cshtml
+++ b/ASP_LABS/Areas/Admin/Pages/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using ASP_LABS.Domain.Entities
 @using ASP_LABS.Domain.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ASP_LABS
