--- a/ASP_LABS/Views/Book/Index.cshtml
+++ b/ASP_LABS/Views/Book/Index.cshtml
@@ -1,9 +1,5 @@
 ﻿@model ListModel<Book>
 @{
-	var request = ViewContext.HttpContext.Request;
-	var returnUrl = request.Path + request.QueryString.ToUriComponent();
-
-
 }
 
 <h1>Каталог Книг</h1>
@@ -22,80 +18,6 @@
 	</ul>
 </div>
 
-<!-- Карточки -->
-<div class="row">
-	@foreach (var element in Model.Items)
-	{
-		<div class="col-md-4 g-5">
-			<div class="card" style="width: 18rem;">
-				<img src="@element.ImagePath" class="card-img-top">
-
-				<div class="card-body">
-					<h5 class="card-title">@element.Title</h5>
-					<p class="card-text">@element.Description</p>
-					<div class="row">
-						<div class="col-md-4"></div>
-						<div class="col-md-4">
-							<a asp-controller="Cart" asp-action="Add" asp-route-id="@element.Id" asp-route-returnurl="@returnUrl" class="btn btn-primary">Купить</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	}
+<div id="partialData">
+	<partial name="_BooksPartial" />
 </div>
-
-
-
-<!-- Paginator -->
-<nav aria-label="...">
-	<ul class="pagination">
-		@if (Model.CurrentPage > 1)
-		{
-			<li class="page-item">
-				<a class="page-link" asp-controller="Book" asp-action="Index" asp-route-genre="@ViewContext.RouteData.Values["genre"]" asp-route-page="@(Model.CurrentPage - 1)">Назад</a>
-			</li>
-		}
-		else
-		{
-			<li class="page-item disabled">
-				<span class="page-link">Назад</span>
-			</li>
-		}
-		@if (Model.CurrentPage > 1)
-		{
-		<li class="page-item">
-				<a class="page-link" asp-controller="Book" asp-action="Index" asp-route-genre="@ViewContext.RouteData.Values["genre"]" asp-route-page="@(Model.CurrentPage - 1)">@(Model.CurrentPage - 1)</a>
-		</li>
-		}
-		
-		<li class="page-item active" aria-current="page">
-			<span class="page-link">@Model.CurrentPage</span>
-		</li>
-		
-		@if (Model.CurrentPage < Model.TotalPages)
-		{
-			<li class="page-item">
-				<a class="page-link" asp-controller="Book" asp-action="Index" asp-route-genre="@ViewContext.RouteData.Values["genre"]" asp-route-page="@(Model.CurrentPage + 1)">@(Model.CurrentPage + 1)</a>
-			</li>
-		}
-		@if (Model.CurrentPage < Model.TotalPages)
-		{
-			<li class="page-item">
-				<a class="page-link" asp-controller="Book" asp-action="Index" asp-route-genre="@ViewContext.RouteData.Values["genre"]" asp-route-page="@(Model.CurrentPage + 1)">Вперед</a>
-			</li>
-		}
-		else
-		{
-			<li class="page-item disabled">
-				<span class="page-link">Вперед</span>
-			</li>
-		}
-
-		
-
-	</ul>
-</nav>
-	
-	
-
