--- a/ASP_LABS/Views/Book/_BooksPartial.cshtml
+++ b/ASP_LABS/Views/Book/_BooksPartial.cshtml
@@ -15,11 +15,12 @@
 	{
 		<div class="col-md-4 g-5">
 			<div class="card" style="width: 18rem;">
-				<img src="@element.ImagePath" class="card-img-top">
+				<img src="@element.ImagePath" class="card-img-top" alt="...">
 
 				<div class="card-body">
 					<h5 class="card-title">@element.Title</h5>
 					<p class="card-text">@element.Description</p>
+					<small class="card-text">Цена: @element.Price</small>
 					<div class="row">
 						<div class="col-md-4"></div>
 						<div class="col-md-4">
